<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/material_dynamic_tertiary60"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_questions"
        android:id="@+id/total_question"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_will_be_question"
        android:id="@+id/question"
        android:textStyle="bold"

        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:layout_above="@+id/choice_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choice_layout"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_A"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_a"
            android:textColor="@color/design_default_color_primary"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_B"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_b"
            android:textColor="@color/design_default_color_primary"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_c"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_c"
            android:textColor="@color/design_default_color_primary"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ans_d"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/ans_d"
            android:textColor="@color/design_default_color_primary"
            />


    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_btn"
        android:text="@string/submit"
        android:layout_below="@+id/choice_layout"
        android:layout_marginTop="40dp"/>
    </RelativeLayout>

